# plugins_delete-project

./: .bazelrc  .buckconfig  .eslintrc.js  .eslintrc.json  .gitignore  BUCK  BUILD  MODULE.bazel  README.md  VERSION  WORKSPACE  external_plugin_deps.bzl  gerrit_plugin_deps.lock.json  groups  package.json  plugin.html  pom.xml  project.config  rollup.config.js  tsconfig.json  tsconfig_bazel.json
gr-delete-repo/: gr-delete-repo.html  gr-delete-repo.js  gr-delete-repo.ts  gr-delete-repo_html.js  gr-delete-repo_html.ts  plugin.js  plugin.ts
lib/gerrit/: BUCK
lib/log/: BUCK
src/main/java/com/google/gerrit/plugins/: BaseModule.java  DeleteCommand.java  DeleteProject.java  DeleteProjectCapability.java  DeleteProjectCommandModule.java  DeleteProjectFailedException.java  DeleteProjectModule.java  SshDeleteCommand.java  SshDeleteCommandModule.java  SshModule.java  UiDeleteCommand.java
src/main/resources/Documentation/: about.md  build.md  cmd-delete.md  config.md  rest-api-delete.txt  rest-api-projects.md
src/main/resources/static/: delete-project-with-preserve-disabled.js  delete-project.html  delete-project.js  project-command-delete-project.html  project-command-delete-project.js  repo-command-delete-repo.html  repo-command-delete-repo.js
tools/: workspace-status.sh  workspace_status.py
tools/bzl/: genrule2.bzl  js.bzl
tools/eclipse/: BUILD  project.sh
web/: BUILD  eslint.config.js  gr-delete-repo.ts  gr-delete-repo_test.ts  karma_test.sh  plugin.ts  tsconfig.json  web_test_runner.sh
web/test/: test-setup.ts  test-util.ts
(+53 files in other folders)
